--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -11,6 +11,38 @@
     <%= csrf_meta_tags %>
   </head>
 
+<header>
+	<div class="row">
+		<div class="medium-4 columns">
+			<img src="http://placehold.it/450x183&text=LOGO" alt="company logo">
+		</div>
+		<div class="medium-8 columns">
+		<img src="http://placehold.it/900x175&text=Responsive Ads - ZURB Playground/333" alt="advertisement for deep fried Twinkies">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="medium-12 columns">
+			<div class="top-bar">
+				<div class="top-bar-left">
+					<ul class="menu">
+						<li><a href="/index">Home</a></li>
+						<li><a href="/about">About</a></li>
+					</ul>
+				</div>
+				<div class="top-bar-right">
+					<ul class="menu">
+						<!--<li><input type="search" placeholder="Search"></li>-->
+						<!--<li><button type="button" class="button">Search</button></li>-->
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</header>
+
+<br>
+
 <%= yield %>
 
 <%= javascript_include_tag "application" %>
