--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
 					<ul class="menu">
 						<li><a href="/index">Home</a></li>
 						<li><a href="/about">About</a></li>
+						<li><a href="/feedback">Feedback</a></li>
 					</ul>
 				</div>
 				<div class="top-bar-right">
