--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -13,11 +13,18 @@
 
 <header>
 	<div class="row">
-		<div class="medium-4 columns">
-			<img src="http://placehold.it/450x183&text=LOGO" alt="company logo">
+		<div class="medium-3 columns">
+			<%=image_tag("kcl-logo.jpg", alt: "Example Image", width:"100%")%>
 		</div>
-		<div class="medium-8 columns">
-		<img src="http://placehold.it/900x175&text=Responsive Ads - ZURB Playground/333" alt="advertisement for deep fried Twinkies">
+		<div class="medium-3 columns">
+			<h1 class='C'> Careers & </h1>
+			<h1 class='C'> Employability </h1>
+		</div>
+		<div class="medium-3 columns">
+			<h1 class='G'> Graduate </h1>
+			<h1 class='G'> School </h1>
+		</div>
+		<div class="medium-3 columns">
 		</div>
 	</div>
 
@@ -26,9 +33,9 @@
 			<div class="top-bar">
 				<div class="top-bar-left">
 					<ul class="menu">
-						<li><a href="/index">Home</a></li>
-						<li><a href="/about">About</a></li>
-						<li><a href="/feedback">Feedback</a></li>
+						<li><a href="/index" class='First'>HOME</a></li>
+						<li><a href="/about">ABOUT</a></li>
+						<li><a href="/feedback">FEEDBACK</a></li>
 					</ul>
 				</div>
 				<div class="top-bar-right">
@@ -38,6 +45,12 @@
 					</ul>
 				</div>
 			</div>
+		</div>
+	</div>
+<br>
+	<div class="row">
+		<div class="medium-12 columns">
+			<center><%=image_tag("do1thing_logo.png", alt: "Do One Thing Logo", width:"50%")%></center>
 		</div>
 	</div>
 </header>
