--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -1,20 +1,21 @@
 <style>.fi-social-facebook{color:dodgerblue;font-size:2rem;}.fi-social-youtube{color:red;font-size:2rem;}.fi-social-pinterest{color:darkred;font-size:2rem;}i.fi-social-instagram{color:brown;font-size:2rem;}i.fi-social-tumblr{color:navy;font-size:2rem;}.fi-social-twitter{color:skyblue;font-size:2rem;}</style>
 
 <div class="row">
-<div class="medium-8 columns">
-<p><img src="http://placehold.it/900x450&text=Promoted Article" alt="main article image"></p>
-</div>
-<div class="medium-4 columns">
-<p><img src="http://placehold.it/400x200&text=Other cool article" alt="article promo image" alt="advertisement for deep fried Twinkies"></p>
-<p><img src="http://placehold.it/400x200&text=Other cool article" alt="article promo image"></p>
-</div>
+	<div class="medium-8 columns">
+		<p><img src="http://placehold.it/900x450&text=Promoted Article" alt="main article image"></p>
+	</div>
+	
+	<div class="medium-4 columns">
+		<p><img src="http://placehold.it/400x200&text=Other cool article" alt="article promo image" alt="advertisement for deep fried Twinkies"></p>
+		<p><img src="http://placehold.it/400x200&text=Other cool article" alt="article promo image"></p>
+	</div>
 </div>
 
-<hr>
+<hr class='top'>
 <div class="row column">
 <h4 style="margin: 0;" class="text-center">MOST POPULAR</h4>
 </div>
-<hr>
+<hr class='bottom'>
 <div class="row small-up-3 medium-up-4 large-up-5">
 <div class="column">
 <img src="http://placehold.it/400x370&text=Look at me!" alt="image for article">
@@ -32,11 +33,11 @@
 <img src="http://placehold.it/400x370&text=Look at me!" alt="image for article">
 </div>
 </div>
-<hr>
+<hr class='top'>
 <div class="row column">
-<h4 style="margin: 0;" class="text-center">LATEST OPPURTUNITES</h4>
+<h4 style="margin: 0;" class="text-center">LATEST OPPORTUNITES</h4>
 </div>
-<hr>
+<hr class ='bottom'>
 <div class="row">
 <div class="large-12 columns" style="border-right: 1px solid #E3E5E8;">
 <article>
@@ -45,7 +46,7 @@
 <p><img src="http://placehold.it/600x370&text=Look at me!" alt="image for article" alt="article preview image"></p>
 </div>
 <div class="large-6 columns">
-<h5><a href="#">'Death Star' Vaporizes Its Own Planet</a></h5>
+<h5><a class='OT' href="#">Opportunity One</a></h5>
 <p>
 <span><i class="fi-torso"> By Thadeus &nbsp;&nbsp;</i></span>
 <span><i class="fi-calendar"> 11/23/16 &nbsp;&nbsp;</i></span>
@@ -60,7 +61,7 @@
 <p><img src="http://placehold.it/600x370&text=Look at me!" alt="image for article" alt="article preview image"></p>
 </div>
 <div class="large-6 columns">
-<h5><a href="#">NASA's SLS Rocket Sheds Saturn V Color Scheme in Design Review</a></h5>
+<h5 ><a class='OT' href="#">Opportunity Two</a></h5>
 <p>
 <span><i class="fi-torso"> By Thadeus &nbsp;&nbsp;</i></span>
 <span><i class="fi-calendar"> 11/23/16 &nbsp;&nbsp;</i></span>
