Added the example articles

--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <header>
 	<div class="row">
 		<div class="medium-3 columns">
-			<%=image_tag("kcl-logo.jpg", alt: "Example Image", width:"100%")%>
+			<%=image_tag("kcl-logo.jpg", alt: "King's College London Logo", width:"100%")%>
 		</div>
 		<div class="medium-3 columns">
 			<h1 class='C'> Careers & </h1>
