--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -2,11 +2,11 @@
 
 <div class="row">
 	<div class="medium-8 columns">
-		<p><img src="http://placehold.it/900x450&text=Promoted Article" alt="main article image"></p>
+		<%=image_tag("careers_consultant.jpg", alt: "See a Careers Consultant", width:"100%")%>
 	</div>
 	
 	<div class="medium-4 columns">
-		<p><img src="http://placehold.it/400x200&text=Other cool article" alt="article promo image" alt="advertisement for deep fried Twinkies"></p>
+		<%=image_tag("excellence_in_teaching.jpg", alt: "See a Careers Consultant", width:"100%")%>
 		<p><img src="http://placehold.it/400x200&text=Other cool article" alt="article promo image"></p>
 	</div>
 </div>
@@ -43,31 +43,29 @@
 <article>
 <div class="row">
 <div class="large-6 columns">
-<p><img src="http://placehold.it/600x370&text=Look at me!" alt="image for article" alt="article preview image"></p>
+<%=image_tag("careers_consultant.jpg", alt: "See a Careers Consultant", width:"100%")%>
 </div>
 <div class="large-6 columns">
-<h5><a class='OT' href="#">Opportunity One</a></h5>
+<h5><a class='OT' href="#"> See a Careers Consultant</a></h5>
 <p>
-<span><i class="fi-torso"> By Thadeus &nbsp;&nbsp;</i></span>
+<span><i class="fi-torso"> Expert, confidential careers guidance for PhDs and Research Staff &nbsp;&nbsp;</i></span>
 <span><i class="fi-calendar"> 11/23/16 &nbsp;&nbsp;</i></span>
-<span><i class="fi-comments"> 6 comments</i></span>
 </p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit beatae, ipsum delectus aperiam nesciunt magni facilis ullam.</p>
+<p>Get clarity on your future by talking to one of our expert careers consultants</p>
 </div>
 </div>
 <hr>
 <div class="row">
 <div class="large-6 columns">
-<p><img src="http://placehold.it/600x370&text=Look at me!" alt="image for article" alt="article preview image"></p>
+<%=image_tag("excellence_in_teaching.jpg", alt: "See a Careers Consultant", width:"100%")%>
 </div>
 <div class="large-6 columns">
-<h5 ><a class='OT' href="#">Opportunity Two</a></h5>
+<h5 ><a class='OT' href="#">10th Excellence in Teaching Conference</a></h5>
 <p>
-<span><i class="fi-torso"> By Thadeus &nbsp;&nbsp;</i></span>
+<span><i class="fi-torso"> Enhance your knowledge of best practice in teaching &nbsp;&nbsp;</i></span>
 <span><i class="fi-calendar"> 11/23/16 &nbsp;&nbsp;</i></span>
-<span><i class="fi-comments"> 6 comments</i></span>
 </p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit beatae, ipsum delectus aperiam nesciunt magni facilis ullam.</p>
+<p>Stay up to Date on the Latest Developments in Teaching</p>
 </div>
 </div>
 <hr>
