Added the ability to auto generate content from a database

--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -41,34 +41,25 @@
 <div class="row">
 <div class="large-12 columns" style="border-right: 1px solid #E3E5E8;">
 <article>
+
+<% @jobs.each do |message| %> 
 <div class="row">
 <div class="large-6 columns">
-<%=image_tag("careers_consultant.jpg", alt: "See a Careers Consultant", width:"100%")%>
+<%=image_tag(message.image, alt: "See a Careers Consultant", width:"100%")%>
 </div>
 <div class="large-6 columns">
-<h5><a class='OT' href="#"> See a Careers Consultant</a></h5>
+<h5><a class='OT' href="#"> <p><%= message.name %></p> </a></h5>
 <p>
-<span><i class="fi-torso"> Expert, confidential careers guidance for PhDs and Research Staff &nbsp;&nbsp;</i></span>
-<span><i class="fi-calendar"> 11/23/16 &nbsp;&nbsp;</i></span>
+<span><i class="fi-torso"> <%= message.tagline %> &nbsp;&nbsp;</i></span>
+<span><i class="fi-calendar"> <p class="time"><%= message.created_at %></p>  &nbsp;&nbsp;</i></span>
 </p>
-<p>Get clarity on your future by talking to one of our expert careers consultants</p>
+<p class="content"><%= message.short %></p> 
 </div>
 </div>
 <hr>
-<div class="row">
-<div class="large-6 columns">
-<%=image_tag("excellence_in_teaching.jpg", alt: "See a Careers Consultant", width:"100%")%>
-</div>
-<div class="large-6 columns">
-<h5 ><a class='OT' href="#">10th Excellence in Teaching Conference</a></h5>
-<p>
-<span><i class="fi-torso"> Enhance your knowledge of best practice in teaching &nbsp;&nbsp;</i></span>
-<span><i class="fi-calendar"> 11/23/16 &nbsp;&nbsp;</i></span>
-</p>
-<p>Stay up to Date on the Latest Developments in Teaching</p>
-</div>
-</div>
-<hr>
+<% end %>
+
+<!--
 <ul class="pagination" role="navigation" aria-label="Pagination">
 <li class="disabled">Previous <span class="show-for-sr">page</span></li>
 <li class="current"><span class="show-for-sr">You're on page</span> 1</li>
@@ -77,6 +68,7 @@
 <li><a href="#" aria-label="Page 4">4</a></li>
 <li><a href="#" aria-label="Next page">Next <span class="show-for-sr">page</span></a></li>
 </ul>
+-->
 </article>
 </div>
 </div>
