Added page link generation

--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
+<% @title="Home" %>
+
 <style>.fi-social-facebook{color:dodgerblue;font-size:2rem;}.fi-social-youtube{color:red;font-size:2rem;}.fi-social-pinterest{color:darkred;font-size:2rem;}i.fi-social-instagram{color:brown;font-size:2rem;}i.fi-social-tumblr{color:navy;font-size:2rem;}.fi-social-twitter{color:skyblue;font-size:2rem;}</style>
 
 <div class="row">
@@ -36,6 +38,7 @@
 <hr class='top'>
 <div class="row column">
 <h4 style="margin: 0;" class="text-center">LATEST OPPORTUNITES</h4>
+<p>  <%= params[:id] %></p>
 </div>
 <hr class ='bottom'>
 <div class="row">
