Basic data management added

--- a/do_one_thing/app/views/welcome/opportunity.html.erb
+++ b/do_one_thing/app/views/welcome/opportunity.html.erb
@@ -9,7 +9,7 @@
 					<%=image_tag(message.image, alt: "See a Careers Consultant", width:"100%")%>
 				</div>
 				<div class="large-6 columns">
-					<h5><a class='OT' href=<%= message.url %>> <p><%= message.name %></p> </a></h5>
+					<h5><a class='OT'> <p><%= message.name %></p> </a></h5>
 					<p>
 						<span><i class="fi-torso"> <%= message.tagline %> &nbsp;&nbsp;</i></span>
 						<span><i class="fi-calendar"> <p class="time"><%= message.created_at %></p>  &nbsp;&nbsp;</i></span>
