Continued customisation of database and added promoted articles

--- a/do_one_thing/app/views/welcome/opportunity.html.erb
+++ b/do_one_thing/app/views/welcome/opportunity.html.erb
@@ -1,7 +1,7 @@
 <% @title=params[:id] %>
 
 <div class="row">
-		<% page="opportunity/" + params[:id] %>
+		<% page=params[:id] %>
 		<% @jobs.each do |message| %> 
 
 			<% if page==message.url %>
