--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -3,14 +3,25 @@
 <style>.fi-social-facebook{color:dodgerblue;font-size:2rem;}.fi-social-youtube{color:red;font-size:2rem;}.fi-social-pinterest{color:darkred;font-size:2rem;}i.fi-social-instagram{color:brown;font-size:2rem;}i.fi-social-tumblr{color:navy;font-size:2rem;}.fi-social-twitter{color:skyblue;font-size:2rem;}</style>
 
 <div class="row">
+	<% @jobs.reverse.each do |message| %> 
+	<%if message.primary==true %>
 	<div class="medium-8 columns">
-		<%=image_tag("careers_consultant.jpg", alt: "See a Careers Consultant", width:"100%")%>
+		<%=image_tag(message.image, alt: message.name, width:"100%")%>
 	</div>
+	<%break%>
+	<%end %>
+	<% end %>
 	
+	<% @jobs.reverse.each do |message| %> 
+	<% sc=0 %>
+	<%if message.secondary==true and sc<2 %>
+	<%sc=sc+1 %>
 	<div class="medium-4 columns">
-		<%=image_tag("excellence_in_teaching.jpg", alt: "See a Careers Consultant", width:"100%")%>
-		<p><img src="http://placehold.it/400x200&text=Other cool article" alt="article promo image"></p>
+		<%=image_tag(message.image, alt: message.name, width:"100%")%>
 	</div>
+	<%end %>
+	<% end %>
+
 </div>
 
 <hr class='top'>
@@ -45,13 +56,17 @@
 <div class="large-12 columns" style="border-right: 1px solid #E3E5E8;">
 <article>
 
-<% @jobs.each do |message| %> 
+<% @jobs.reverse.each do |message| %> 
+<% oc=0 %>
+<% if oc<3 %>
+<% oc = oc+1 %>
 <div class="row">
 <div class="large-6 columns">
-<%=image_tag(message.image, alt: "See a Careers Consultant", width:"100%")%>
+<%=image_tag(message.image, alt:  message.name, width:"100%")%>
 </div>
 <div class="large-6 columns">
-<h5><a class='OT' href=<%= message.url %>> <p><%= message.name %></p> </a></h5>
+<% url="opportunity/" + message.url %>
+<h5><a class='OT' href=<%= url %>> <p><%= message.name %></p> </a></h5>
 <p>
 <span><i class="fi-torso"> <%= message.tagline %> &nbsp;&nbsp;</i></span>
 <span><i class="fi-calendar"> <p class="time"><%= message.created_at %></p>  &nbsp;&nbsp;</i></span>
@@ -60,6 +75,7 @@
 </div>
 </div>
 <hr>
+<% end %>
 <% end %>
 
 <!--
