--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 	<% @jobs.reverse.each do |message| %> 
 	<%if message.primary==true %>
 	<div class="medium-8 columns">
-		<%=image_tag(message.image, alt: message.name, width:"100%")%>
+		<%=image_tag(message.photo.url, alt: message.name, width:"100%")%>
 	</div>
 	<%break%>
 	<%end %>
@@ -17,7 +17,7 @@
 	<%if message.secondary==true and sc<2 %>
 	<%sc=sc+1 %>
 	<div class="medium-4 columns">
-		<%=image_tag(message.image, alt: message.name, width:"100%")%>
+		<%=image_tag(message.photo.url, alt: message.name, width:"100%")%>
 	</div>
 	<%end %>
 	<% end %>
@@ -49,7 +49,6 @@
 <hr class='top'>
 <div class="row column">
 <h4 style="margin: 0;" class="text-center">LATEST OPPORTUNITES</h4>
-<p>  <%= params[:id] %></p>
 </div>
 <hr class ='bottom'>
 <div class="row">
@@ -62,7 +61,7 @@
 <% oc = oc+1 %>
 <div class="row">
 <div class="large-6 columns">
-<%=image_tag(message.image, alt:  message.name, width:"100%")%>
+<%=image_tag(message.photo.url, alt:  message.name, width:"100%")%>
 </div>
 <div class="large-6 columns">
 <% url="opportunity/" + message.url %>
