--- a/do_one_thing/app/views/welcome/opportunity.html.erb
+++ b/do_one_thing/app/views/welcome/opportunity.html.erb
@@ -6,7 +6,7 @@
 
 			<% if page==message.url %>
 				<div class="large-6 columns">
-					<%=image_tag(message.image, alt: "See a Careers Consultant", width:"100%")%>
+					<%=image_tag(message.photo.url, alt: "See a Careers Consultant", width:"100%")%>
 				</div>
 				<div class="large-6 columns">
 					<h5><a class='OT'> <p><%= message.name %></p> </a></h5>
