--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -13,18 +13,8 @@
 
 <header>
 	<div class="row">
-		<div class="medium-3 columns">
-			<%=image_tag("kcl-logo.jpg", alt: "King's College London Logo", width:"100%")%>
-		</div>
-		<div class="medium-3 columns">
-			<h1 class='C'> Careers & </h1>
-			<h1 class='C'> Employability </h1>
-		</div>
-		<div class="medium-3 columns">
-			<h1 class='G'> Graduate </h1>
-			<h1 class='G'> School </h1>
-		</div>
-		<div class="medium-3 columns">
+		<div class="medium-6 columns">
+			<%=image_tag("header_logos.png", alt: "King's College London Logo", width:"100%")%>
 		</div>
 	</div>
 
@@ -50,7 +40,7 @@
 <br>
 	<div class="row">
 		<div class="medium-12 columns">
-			<center><%=image_tag("do1thing_logo.png", alt: "Do One Thing Logo", width:"50%")%></center>
+			<center><%=image_tag("do1thing_logo.png", alt: "Do One Thing Logo")%></center>
 		</div>
 	</div>
 </header>
