--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -18,6 +18,7 @@
 	<%sc=sc+1 %>
 	<div class="medium-4 columns">
 		<%=image_tag(message.photo.url, alt: message.name, width:"100%")%>
+		<h1><%message.tagline %></h1>
 	</div>
 	<%end %>
 	<% end %>
@@ -26,7 +27,7 @@
 
 <hr class='top'>
 <div class="row column">
-<h4 style="margin: 0;" class="text-center">MOST POPULAR</h4>
+<h4 style="margin: 0;" class="text-center">MOST POPULAR - CHOSEN BY KING'S RESEARCHERS</h4>
 </div>
 <hr class='bottom'>
 <div class="row small-up-3 medium-up-4 large-up-5">
@@ -57,7 +58,7 @@
 
 <% oc=0 %>
 <% @jobs.reverse.each do |message| %> 
-<% if oc<3 %>
+<% if oc<10 %>
 <% oc = oc+1 %>
 <div class="row">
 <div class="large-6 columns">
@@ -77,7 +78,7 @@
 <% end %>
 <% end %>
 
-<% if @jobs.length >3 %>
+<% if @jobs.length >10 %>
 <ul class="pagination" role="navigation" aria-label="Pagination">
 <li class="disabled">Previous <span class="show-for-sr">page</span></li>
 <li class="current"><span class="show-for-sr">You're on page</span> 1</li>
