--- a/do_one_thing/app/views/welcome/opportunity.html.erb
+++ b/do_one_thing/app/views/welcome/opportunity.html.erb
@@ -1,4 +1,11 @@
 <% @title=params[:id] %>
+<hr class='top'>
+<div class="row column">
+	<div class="large-12 columns">
+<h4 style="margin: 0;" class="text-center">OPPORTUNITY DESCRIPTION</h4>
+</div>
+</div>
+<hr class='bottom'>
 
 <div class="row">
 		<% page=params[:id] %>
