--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
 <div class="large-12 columns">
 <div class="row expanded callout secondary">
 	<% if not user_signed_in? %>
-		<li><%= link_to "Sign in", new_user_session_path %></li>
+		<p><%= link_to "Sign in", new_user_session_path %></p>
 	<% end %>
 </div>	
 </div>
