--- a/do_one_thing/app/views/welcome/opportunity.html.erb
+++ b/do_one_thing/app/views/welcome/opportunity.html.erb
@@ -12,6 +12,7 @@
 		<% @jobs.each do |message| %> 
 
 			<% if page==message.url %>
+			<% textdat = message.tagline.to_s %>
 				<div class="large-6 columns">
 					<%=image_tag(message.photo.url, alt: "See a Careers Consultant", width:"100%")%>
 				</div>
@@ -19,7 +20,9 @@
 					<h5><a class='OT'> <p><%= message.name %></p> </a></h5>
 					<p>
 						<span><i class="fi-torso"> <%= message.tagline %> &nbsp;&nbsp;</i></span>
-						<span><i class="fi-calendar"> <p class="time"><%= message.created_at.to_date %></p>  &nbsp;&nbsp;</i></span>
+						<span><i class="fi-calendar"> <p class="time"><%= message.created_at.to_date %> </p>  &nbsp;&nbsp;</i></span>
+						<span><a href="https://twitter.com/share" class="twitter-share-button" data-text=<%=message.url%> data-related="kcldo1thing" data-hashtags="kcldo1thing">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+						<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button_count&mobile_iframe=true&width=97&height=20&appId" width="97" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe></span>
 					</p>
 					<p class="content"><%= message.content %></p> 
 				</div>
