Proper Share Buttons

--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -61,9 +61,10 @@
 		<p class="pfooter"><%= link_to "Sign in", new_user_session_path %> </p>
 	<% end %>
 </div>
-<div class="large-6 columns">
+<div class="large-6 columns" align="right">
 	<ul class="menu">
 		<li>
+			<%= social_share_button_tag("Do1Thing") %>
 		</li>
 </ul>
 </div>
