--- a/do_one_thing/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/do_one_thing/app/assets/stylesheets/foundation_and_overrides.scss
@@ -45,6 +45,7 @@
 @include foundation-title-bar;
 @include foundation-tooltip;
 @include foundation-top-bar;
+@import "social-share-button";
 
 // If you'd like to include motion-ui the foundation-rails gem comes prepackaged with it, uncomment the 3 @imports, if you are not using the gem you need to install the motion-ui sass package.
 //
