Added an expiry and a release to the jobs database

--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
 	<% end %>
 
 </div>
-
+<!--
 <hr class='top'>
 <div class="row column">
 <h4 style="margin: 0;" class="text-center">MOST POPULAR - CHOSEN BY KING'S RESEARCHERS</h4>
@@ -48,6 +48,7 @@
 <img src="http://placehold.it/400x370&text=Look at me!" alt="image for article">
 </div>
 </div>
+-->
 <hr class='top'>
 <div class="row column">
 <h4 style="margin: 0;" class="text-center">LATEST OPPORTUNITES</h4>
@@ -70,7 +71,10 @@
 <h5><a class='OT' href=<%= url %>> <p><%= message.name %></p> </a></h5>
 <p>
 <span><i class="fi-torso"> <%= message.tagline %> &nbsp;&nbsp;</i></span>
-<span><i class="fi-calendar"> <p class="time"><%= message.created_at.to_date.strftime("%d/%m/%Y") %></p>  &nbsp;&nbsp;</i></span>
+<span><i class="fi-calendar"> <p class="time">Opportunity added on: <%= message.release.to_date.strftime("%d/%m/%Y") %>. Deadline: <%= message.expiry.to_date.strftime("%d/%m/%Y") %></p>  &nbsp;&nbsp;</i></span>
+<!--
+<span><i class="fi-calendar"> <p class="time"><%= message.release %> <%= Time.now %></p>  &nbsp;&nbsp;</i></span>
+-->
 <span><%= social_share_button_tag(message.name, :url=>full_url) %></span>
 </p>
 <p class="content"><%= message.short %></p> 
