--- a/do_one_thing/app/views/devise/passwords/edit.html.erb
+++ b/do_one_thing/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+<div class="large-12 columns">
+
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -23,3 +26,6 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+</div>
