--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -60,6 +60,8 @@
 <% oc=0 %>
 <% @jobs.reverse.each do |message| %> 
 <% if oc<10 %>
+<% if message.release.to_date < Time.now %>
+<% if message.expiry.to_date > Time.now %>
 <% oc = oc+1 %>
 <div class="row">
 <div class="large-6 columns">
@@ -81,6 +83,8 @@
 </div>
 </div>
 <hr>
+<% end %>
+<% end %>
 <% end %>
 <% end %>
 
