--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 				<div class="top-bar-right">
 					<% if user_signed_in? %>
 					<ul class="dropdown menu" data-dropdown-menu>
-						<li><%= link_to "Admin", 'admin' %></li>
+						<li><%= link_to "Admin", '/admin' %></li>
   						<li><%= link_to "Profile", edit_user_registration_path %></li>
   						<li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
 					</ul>
