--- a/do_one_thing/app/views/welcome/opportunity.html.erb
+++ b/do_one_thing/app/views/welcome/opportunity.html.erb
@@ -8,6 +8,7 @@
 <hr class='bottom'>
 
 <div class="row">
+	<%=@hit.impressionist_count%>
 		<% page=params[:id] %>
 		<% @jobs.each do |message| %> 
 
