--- a/do_one_thing/app/views/welcome/opportunity.html.erb
+++ b/do_one_thing/app/views/welcome/opportunity.html.erb
@@ -8,7 +8,7 @@
 <hr class='bottom'>
 
 <div class="row">
-	<%=@hit.impressionist_count%>
+	<%=@hit.impressionist_count(:start_date=>Date.today-7.days)%>
 		<% page=params[:id] %>
 		<% @jobs.each do |message| %> 
 
