--- a/do_one_thing/app/views/layouts/application.html.erb
+++ b/do_one_thing/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
 		<div class="medium-6 columns">
 			<%=image_tag("header_logos.png", alt: "King's College London Logo", width:"100%")%>
 		</div>
+				<div class="medium-2 columns">
+			<%=image_tag("do1thing_logo.png", alt: "Do1Thing Logo", height:"10")%>
+		</div>
 	</div>
 
 	<div class="row">
@@ -25,7 +28,7 @@
 					<ul class="menu">
 						<li><a href="/index" class='First'>HOME</a></li>
 						<li><a href="/about">ABOUT</a></li>
-						<li><a href="/feedback">FEEDBACK</a></li>
+						<li><a href="/contact_us">CONTACT US</a></li>
 					</ul>
 				</div>
 				<div class="top-bar-right">
@@ -40,15 +43,24 @@
 			</div>
 		</div>
 	</div>
-<br>
-	<div class="row">
-		<div class="medium-12 columns">
-			<center><%=image_tag("do1thing_logo.png", alt: "Do One Thing Logo")%></center>
-		</div>
-	</div>
 </header>
 
-<br>
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+ 
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+ 
+  return t;
+}(document, "script", "twitter-wjs"));</script>
 
 <%= yield %>
 
@@ -56,12 +68,16 @@
 
 <footer>
 <div class="row expanded callout secondary">
-	<div class="large-6 columns">
+	<div class="large-2 columns">
+		<%=image_tag("header_logos.png", alt: "King's College London Logo", width:"100%")%>
+	</div>
+	<div class="large-8 columns">
 	<% if not user_signed_in? %>
 		<p class="pfooter"><%= link_to "Sign in", new_user_session_path %> </p>
 	<% end %>
+	<p>&copy; 2016&nbsp;King's College London | Strand | London WC2R 2LS | England | United Kingdom | Tel +44 (0)20 7836 5454</p>
 </div>
-<div class="large-6 columns" align="right">
+<div class="large-2 columns" align="right">
 	<ul class="menu">
 		<li>
 			<%= social_share_button_tag("Do1Thing") %>
