Updated text as per kate's email

--- a/do_one_thing/app/views/welcome/about.html.erb
+++ b/do_one_thing/app/views/welcome/about.html.erb
@@ -9,13 +9,26 @@
 
 <div class="row">
 	<div class="large-12 columns">
+		<p> How do I prepare myself for my future? Where do I start? Which activities do other people rate?
+			We recognise it can be hard to find the nest opportunites for you. But if you #do1thing you'' probably
+		</p>
 		<ul>
-			<li>Designed specifically for research staff and PhDs at King’s, #do1thing gives you all the information you need to find key events and opportunities coming up.  These opportunities may be events, training, courses, job opportunities or reminders of services at King’s, specifically for researchers.
+			<li>Learn something about yourself</li>
+			<li>Realise what you do, or really dont, want to do
 			</li>
-			<li>Doing one thing extra might help you find out more about yourself, your career, meet some interesting people or just enhance your time at King’s.  Doing one thing might lead to doing one more thing and after that, who knows?
+			<li>Meet some interesting people
 			</li>
-			<li>#do1thing is a project from the King’s Research Conslitancy, funded by the Researcher Development Unit.
+			<li> Have an enjoyable experience </li>
+		</ul>
+		<p> Who knows... you might just do another thing and another! </p>
+		<h4> #do1thing </h4>
+				<ul>
+			<li> Is designed specifically for the 4600 research staff and postgraduate research students at King’s</li>
+			<li>Gives you up to date info on the best activities currently available at King’s
 			</li>
+			<li>Welcomes content – contact <a href="mailto:do1thing@kcl.ac.uk">do1thing@kcl.ac.uk</a> or tweet <a href="https://twitter.com/kcldo1thing">@kcldo1thing</a>
+			</li>
+			<li>  Is a project delivered by the King’s Research Consultancy, funded by the Researcher Development Unit and Centre for Research Staff Development</li>
 		</ul>
 	</div>
 </div>
