--- a/do_one_thing/app/views/welcome/index.html.erb
+++ b/do_one_thing/app/views/welcome/index.html.erb
@@ -2,10 +2,12 @@
 <div class="row">
 <div class="large-12 columns">
 		<%=image_tag("Header_Placeholder.png", alt: "Header", width:"100%")%>
-	<p> Doing one thing extra might help you find out more about yourself, your career, meet some interesting people or just enhance your time at King’s.  Doing one thing might lead to doing one more thing and after that, who knows?</p>
-<p>
-We know that finding the right opportunity can be tricky.  #do1thing is your go-to site for the most relevant information for King’s researchers.
-</p>
+	<h4> Calling all King's Researchers! </h4>
+	<ol>
+		<li>Too many activities to choose from?</li>
+		<li>Just #do1thing to help your professional future</li>
+		<li>You’re two clicks away from a great opportunity</li>
+	</ol>
 </div>
 </div>
 <hr class='top'>
