--- a/do_one_thing/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/do_one_thing/app/assets/stylesheets/foundation_and_overrides.scss
@@ -93,3 +93,16 @@ p.pfooter{
 	size: 11px;
 	font: Georgia;
 }
+.overlay-container {
+  position: relative; /* <-- Set as the reference for the positioned overlay */
+}
+
+.overlay-container .overlay {
+  position: absolute; /* <-- Remove the overlay from normal flow         */
+  bottom: 0;          /* <-- Keep the overlay at the bottom of the box   */
+  left: 0;            /* <-- Set left and right properties to 0          */
+  right: 0;           /*     In order to expand the overlay horizontally */
+
+  padding: 0.4rem;
+  background-color: rgba(255, 255, 255, 0.7);
+}
