--- a/do_one_thing/app/views/devise/registrations/new.html.erb
+++ b/do_one_thing/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 <div class="large-12 columns">
-
+<hr class='top'>
 <h2>Sign up</h2>
-
+<hr class='bottom'>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
